# larktools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: first_example.py
larktools/: LICENSE.txt  README.md  pyproject.toml
larktools/examples/: first_example.py
larktools/src/larktools/: __about__.py  ebnf_grammar.py  evaluation.py
larktools/tests/: __init__.py
src/larktools/: ebnf_grammar.py  evaluation.py  tree_utils.py
tests/: test_arithmetic.py  test_logic.py  test_suite.py  test_syntax.py
