[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "larktools"
dynamic = ["version"]
description = 'A simple grammar for working with hierarchical data formats'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "SPRENGER Julia, NEA/SCI/DB", email = "julia.sprenger@oecd-nea.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/SPRENGER Julia, NEA/SCI/DB/larktools#readme"
Issues = "https://github.com/SPRENGER Julia, NEA/SCI/DB/larktools/issues"
Source = "https://github.com/SPRENGER Julia, NEA/SCI/DB/larktools"

[tool.hatch.version]
path = "src/larktools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/larktools tests}"

[tool.coverage.run]
source_pkgs = ["larktools", "tests"]
branch = true
parallel = true
omit = [
  "src/larktools/__about__.py",
]

[tool.coverage.paths]
larktools = ["src/larktools", "*/larktools/src/larktools"]
tests = ["tests", "*/larktools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
